horizontal scroll fixes

--- a/chord-chart.css
+++ b/chord-chart.css
@@ -52,5 +52,5 @@ KeyBlack {
 
 KeyWhite[isPressed="Y"],
 KeyBlack[isPressed="Y"] {
-  background-color: #0af;
+  background-color: #fc0;
 }
